# tpot

./: .appveyor.yml  .coveragerc  .deepsource.toml  .gitignore  .landscape.yaml  .landscape.yaml.swp  .travis.yml  404.html  Dockerfile  ISSUE_TEMPLATE.md  MANIFEST.in  PULL_REQUEST_TEMPLATE.md  README.md  TPOT_MetaEstimator_on_Expression_Data_with_FSS.ipynb  Test_MetaEstimator in TPOT.ipynb  Test_MetaEstimator.ipynb  Test_MetaEstimator_in_TPOT-withFSS-Regression.ipynb  Test_MetaEstimator_in_TPOT-withFSS.ipynb  Test_MetaEstimator_in_TPOT-withFSS_adj_list.ipynb  Test_MetaEstimator_in_TPOT-withFSS_new.ipynb  Test_MetaEstimator_in_TPOT-withFSS_subset.ipynb  Test_data.ipynb  Test_residualAdj-TPOT-basicTest.ipynb  Test_residualAdj-TPOT-fsstest.ipynb  Test_residualAdj-all-operators.ipynb  Test_residualAdj.ipynb  Testing TPOT usage.ipynb  TpotClassifier.ipynb.py  Untitled.ipynb  Untitled162.ipynb  Untitled163.ipynb  base.py  config_classifier_test.py  covar_feature.csv  decorators.py  export_utils.py  exported_pipeline.py  generalate_pipeline_codes.py  gp_deap.py  gp_types.py  (+53 more)
Akshay/: IRIS- Example.ipynb  Practise.ipynb  tpot_iris_pipeline.py
TPOT/: TPOT.py  __init__.py  tpot.py
Tutorial/: 0_Genetic_Algorithm_Overview.ipynb  1_Estimators_Overview.ipynb  1_Using_TPOT.ipynb  2_Defining_Search_Space_(config_dicts).ipynb  2_Search_Spaces.ipynb  3_Feature_Set_Selector.ipynb  3_Genetic_Feature_Set_Selectors.ipynb  4_Genetic_Feature_Selection.ipynb  4_Symbolic_Regression_and_Classification.ipynb  5_Genetic_Feature_Selection.ipynb  5_GraphPipeline.ipynb  6_GraphPipeline.ipynb  (+10 more)
(+812 files in other folders)
